--- a/FinPlan.Web/Components/Pages/Retire.razor
+++ b/FinPlan.Web/Components/Pages/Retire.razor
@@ -891,7 +891,7 @@
                 <div class="row g-3">
                     <!-- Left mini column (2) -->
                     <div class="col-12 col-md-2">
-                        @if (showSurvey)
+                      @*   @if (showSurvey)
                         {
                             <div class="card survey-card survey-card-narrow mb-2">
                                 <div class="card-body text-center">
@@ -902,7 +902,7 @@
                                     </a>
                                 </div>
                             </div>
-                        }
+                        } *@
                         <!-- Ad container for long Adsterra banner in left column -->
                     </div>
 
