--- a/FinPlan.Web/Pages/Savings/Components/SavingsInputWizard.razor
+++ b/FinPlan.Web/Pages/Savings/Components/SavingsInputWizard.razor
@@ -1,6 +1,7 @@
 @using FinPlan.Shared.Models.Savings
 @using Microsoft.AspNetCore.Components
 @using System.Reflection
+@using Microsoft.AspNetCore.Components.Web
 
 <style>
     .wizard-step-bubble {
