--- a/FinPlan.Web/Pages/Savings/Components/SavingsSummaryGrid.razor
+++ b/FinPlan.Web/Pages/Savings/Components/SavingsSummaryGrid.razor
@@ -1,5 +1,6 @@
 @using FinPlan.Shared.Models.Savings
 @using Microsoft.JSInterop
+@using Microsoft.AspNetCore.Components
 
 @inject IJSRuntime JSRuntime
 
