--- a/FinPlan.Web/Pages/Savings/Components/SavingsYearlyDetailsComponent.razor
+++ b/FinPlan.Web/Pages/Savings/Components/SavingsYearlyDetailsComponent.razor
@@ -2,6 +2,8 @@
 @using FinPlan.Shared.Models.Savings
 @using FinPlan.Shared.Enums
 @using System.Text.Json
+@using Microsoft.AspNetCore.Components
+
 @inject FinPlan.Web.Services.DebugMessageService DebugService
 <style>
 
