--- a/FinPlan.Web/Pages/Savings/Components/SetupSavingsSampleData.razor
+++ b/FinPlan.Web/Pages/Savings/Components/SetupSavingsSampleData.razor
@@ -1,6 +1,6 @@
 ﻿@using FinPlan.Shared.Models.Savings
 @using Microsoft.AspNetCore.Components
-
+@using Microsoft.AspNetCore.Components.Web
 <style>
     .sample-data-modal {
         border-radius: 12px;
